<resources>
    <string name="app_name">EatAndRun</string>
    <string name="meals">Meals</string>
    <string name="Run">Run</string>
    <string name="plan">Plan</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="eat_amp_run"><![CDATA[Eat&Run]]></string>
    <string name="meal_name">Meal name</string>
    <string name="meal_weight_g">Meal weight(g)</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_meal_button">Add meal button</string>
    <string name="summary">Summary</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="cereal_150g_milk_200g">Cereal 150g, Milk 200g</string>
    <string name="energy_icon">energy icon</string>
    <string name="kcal">kcal</string>
    <string name="_321">321</string>
    <string name="clear_all_meals">clear all meals</string>
    <string name="waiting_for_your_meal">Waiting for your meal :)</string>
    <string name="login">login</string>
    <string name="today_s_summary">Today\'s summary</string>
    <string name="caloriestextview">caloriesTextView</string>
    <string name="proteinstextview">proteinsTextView</string>
    <string name="fatstextview">fatsTextView</string>
    <string name="carbstextview">carbsTextView</string>
    <string name="_0_0">0/0</string>
    <string name="calories_kcal">calories(kcal):</string>
    <string name="proteins_g">proteins(g):</string>
    <string name="fats_g">fats(g):</string>
    <string name="carbs_g">carbs(g):</string>
    <string name="height">Height:</string>
    <string name="age">Age:</string>
    <string name="weight">Weight:</string>
    <string name="gender">Gender:</string>
    <string name="activity">Activity:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="_170">170</string>
    <string name="_23">23</string>
    <string name="_88">88</string>
    <string name="current_settings">Current settings</string>
    <string name="none">None</string>
    <string name="foodname">food name</string>
    <string name="proteins">proteins</string>
    <string name="carbs">carbs</string>
    <string name="fats">fats</string>
    <string name="total">total</string>
    <string name="add_meal">Add meal</string>
    <string-array name="activities">
        <item>Basal Metabolic Rate (BMR)</item>
        <item>Sedentary: little or no exercise</item>
        <item>Light: exercise 1–3 times/week</item>
        <item>Moderate: exercise 4–5 times/week</item>
        <item>Active: daily exercise or intense exercise 3–4 times/week</item>
        <item>Very Active: intense exercise 6–7 times/week</item>
        <item>Extra Active: very intense exercise daily, or physical job</item>
    </string-array>


    <!--Add Food-->
    <string name="display_kcal_per_100g">%,.0f kcal per 100g</string>
    <string name="display_current_carbs">%,.0fg of Carbs</string>
    <string name="display_current_proteins">%,.0fg of Proteins</string>
    <string name="display_current_fats">%,.0fg of Fats</string>

    <string name="format_grams">%,.0f g</string>
    <string name="format_total_kcal">%,.0f kcal</string>
    <string name="format_double">%,.0f</string>
    <string name="format_percent">%d %%</string>
    <string name="list_item">List Item</string>
    <string name="search">search</string>
    <string name="meal_not_found">meal not found</string>
    <string name="don_t_have_an_account_yet_register_with_email">Don\'t have an account yet? Register with email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="select_date">Select Date</string>
    <string name="enter_serving_in_grams">Enter serving in grams</string>
    <string name="food_list">Food List</string>
    <string name="confirm_password">Confirm password</string>
    <string name="add_food_button">add food button</string>
    <string name="delete_food_x">delete food x</string>
</resources>