<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/mealListFragment"
        android:icon="@drawable/food_small"
        android:title="@string/meals" />

    <item
        android:id="@+id/navigations_run"
        android:icon="@drawable/runner_small"
        android:title="@string/Run" />

    <item
        android:id="@+id/navigation_plan"
        android:icon="@drawable/calendar_small"
        android:title="@string/plan" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/trophy_small"
        android:title="@string/history" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/settings_small"
        android:title="@string/settings" />
</menu>