<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_very_light"
    android:label="@string/app_name"
    android:orientation="vertical"
    android:padding="16dp"

    tools:context=".ui.main.AddTaskFragment">


    <EditText
        android:id="@+id/editTextMealName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/meal_name"
        android:importantForAutofill="no"
        android:inputType="text" />


    <EditText
        android:id="@+id/editTextTaskDescription"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/meal_weight_g"

        android:importantForAutofill="no"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="2000"
        android:maxLines="4" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:label="@string/app_name"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">


        <Button
            android:id="@+id/saveButton"
            android:layout_width="110dp"
            android:layout_height="66dp"
            android:layout_marginEnd="68dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.288"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.264" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="110dp"
            android:layout_height="66dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.799"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.259" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>