<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/settings_background"
    android:label="@string/app_name"
    android:orientation="vertical"
    android:padding="16dp"
    android:windowSoftInputMode="adjustNothing"
    tools:context="com.thyme.eatandrun.settings.SettingsFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTextView"
        app:layout_constraintVertical_bias="0.251">

        <TextView
            android:id="@+id/heightTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/height"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"

            android:text="@string/age"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/weightTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"

            android:text="@string/weight"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/genderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"

            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/activityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/activity"
            android:textColor="@color/black"

            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>

    <TextView
        android:id="@+id/settingsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="@dimen/text_size_biggest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="170dp"
        android:layout_height="284dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/settingsTextView"
        app:layout_constraintVertical_bias="0.239">

        <EditText
            android:id="@+id/editTextHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="170"
            android:ems="10"
            android:hint="@string/_170"
            android:inputType="number"
            android:padding="15dp"
            android:textSize="@dimen/text_size_normal" />

        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="23"
            android:ems="10"
            android:hint="@string/_23"
            android:inputType="number"
            android:padding="15dp"
            android:textSize="@dimen/text_size_normal" />

        <EditText
            android:id="@+id/editTextWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="88"
            android:ems="10"
            android:hint="@string/_88"
            android:inputType="number"
            android:padding="15dp"
            android:textSize="@dimen/text_size_normal" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="87dp"
                android:layout_height="match_parent"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="87dp"
                android:layout_height="match_parent"
                android:text="@string/female" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spinnerActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewCurrentSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/current_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.1" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCurrentSettings"
        app:layout_constraintVertical_bias="0.472">

        <LinearLayout
            android:layout_width="141dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/height" />

            <TextView
                android:id="@+id/textViewAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/age" />

            <TextView
                android:id="@+id/textViewWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/weight" />

            <TextView
                android:id="@+id/textViewGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/textViewActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/activity" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewHeightValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/none" />

            <TextView
                android:id="@+id/textViewAgeValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/none" />

            <TextView
                android:id="@+id/textViewWeightValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/none" />

            <TextView
                android:id="@+id/textViewGenderValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/none" />

            <TextView
                android:id="@+id/textViewActivityValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/none" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>