<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/summary_background">

    <TextView
        android:id="@+id/Todays_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today_s_summary"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_biggest"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <LinearLayout
        android:id="@+id/linearLayoutSummaryNames"
        android:layout_width="167dp"
        android:layout_height="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Todays_summary"
        app:layout_constraintVertical_bias="0.257">

        <TextView
            android:id="@+id/caloriesName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/calories_kcal"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/proteinsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/proteins_g"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/fatsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/fats_g"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/carbsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/carbs_g"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutSummaryValues"
        android:layout_width="167dp"
        android:layout_height="150dp"
        android:orientation="vertical"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Todays_summary"
        app:layout_constraintVertical_bias="0.257">

        <TextView
            android:id="@+id/caloriestextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/_0_0"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/proteinstextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/_0_0"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/fatstextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/_0_0"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/carbstextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/_0_0"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal" />

    </LinearLayout>

    <Button
        android:id="@+id/cancelButton_summary"
        style="@style/AppTheme.Button.Blue"
        android:layout_width="110dp"
        android:layout_height="66dp"
        android:layout_marginTop="56dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutSummaryNames"
        app:layout_constraintVertical_bias="0.051" />

</androidx.constraintlayout.widget.ConstraintLayout>